# audio_transcription_app

./: .gitignore  README.md  README_DISTRIBUTION.md  app.py  audio_transcription_app.desktop  build.py  linux_app.spec  poetry_app.py  pyproject.toml  run_app.py  run_app.spec  test_audio_generator.py  transcribe.py  transcription.docx  windows_app.spec
.streamlit/: config.toml
